# ECOSMO

./: CMakeLists.txt  README.md  nersc_model_library.F90
dvm/: get_dependencies.F90  move.F90  upper_lower_boundaries-01.F90  upper_lower_boundaries-02.F90  upper_lower_boundaries.F90  weight_distribution.F90
ecosmo/: ecosmo.F90  ecosmo.GMD.2023_25.F90  ecosmo_nersc.F90  ecosmo_operational.F90  fabm.yaml.nersc  fabm.yaml.operational
